<?xml version="1.0"?>
<package>
  <name>karpal_moveit</name>
  <version>0.0.0</version>
  <description>The karpal_moveit package</description>

  <maintainer email="lingzhoulu@gmail.com">Lingzhou Lu</maintainer>

  <license>BSD</license>
  <author email="lingzhoulu@gmail.com">Lingzhou Lu</author> 

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>cmake_modules</run_depend>

  <export>
  </export>
</package>